Wacom tablet's side switches don't work #75566

Closed
opened 2020-04-10 01:54:39 +02:00 by n1729 · 33 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-08 21:23, hash: 1239cab11f
Worked: version: 2.83 (sub 11), branch: master, commit date: 2020-04-01 17:35, hash: a9963669f9

Short description of error
Some side switches of the tablet don't work while a pen is hovering above the surface of the tablet.
If you stop hovering the pen over the tablet, the side switches become to work.

Tablet
Wacom Driver Version 5.3.5-3
Model: CTH-460

Exact steps for others to reproduce the error

  1. Assign a side switch to the middle click.

  2. Hover the pen over the tablet.

  3. Press the side switch and try to rotate a viewport by moving the pen. This doesn't work.

  4. Keep the pen away from the tablet.

  5. Press the side switch.

  6. Move a cursor by using a mouse. In this case, I can rotate a viewport.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-08 21:23, hash: `1239cab11f` Worked: version: 2.83 (sub 11), branch: master, commit date: 2020-04-01 17:35, hash: `a9963669f9` **Short description of error** Some side switches of the tablet don't work while a pen is hovering above the surface of the tablet. If you stop hovering the pen over the tablet, the side switches become to work. **Tablet** Wacom Driver Version 5.3.5-3 Model: CTH-460 **Exact steps for others to reproduce the error** 1) Assign a side switch to the middle click. 2) Hover the pen over the tablet. 3) Press the side switch and try to rotate a viewport by moving the pen. This doesn't work. 1) Keep the pen away from the tablet. 2) Press the side switch. 3) Move a cursor by using a mouse. In this case, I can rotate a viewport.

#75627 was marked as duplicate of this issue

#75627 was marked as duplicate of this issue

#75653 was marked as duplicate of this issue

#75653 was marked as duplicate of this issue

#75654 was marked as duplicate of this issue

#75654 was marked as duplicate of this issue
Author

Added subscriber: @n1729

Added subscriber: @n1729
Author

I found that D6675 is closely related.
I guess Hover Click has broken in my environment.
Hover Click is one of the pen button modes.
Annotation 2020-04-10 094310.jpg

I found that [D6675](https://archive.blender.org/developer/D6675) is closely related. I guess Hover Click has broken in my environment. Hover Click is one of the pen button modes. ![Annotation 2020-04-10 094310.jpg](https://archive.blender.org/developer/F8461050/Annotation_2020-04-10_094310.jpg)
n1729 changed title from Wacom tablet's keys don't work to Wacom tablet's side switches don't work 2020-04-10 02:56:15 +02:00
Author

I found another fact.
When I changed Preferences>Input>Tablet>Tablet API from Automatic to Windows Ink, everything worked.
Hover Click came back.

I found another fact. When I changed `Preferences>Input>Tablet>Tablet API` from `Automatic` to `Windows Ink`, ~~everything worked.~~ Hover Click came back.
Author

I found yet another fact...
When I use Windows Ink at the blender preferences, the pressure doesn't work.
So, I enabled Windows Ink at the wacom driver settings, and then the pressure comes back again.
BUT, in turn, Hover Click breaks again if I do it.

I found yet another fact... When I use `Windows Ink` at the blender preferences, the pressure doesn't work. So, I enabled Windows Ink at the wacom driver settings, and then the pressure comes back again. BUT, in turn, Hover Click breaks again if I do it.
Member

Added subscribers: @PrototypeNM1, @LazyDodo

Added subscribers: @PrototypeNM1, @LazyDodo
Nicholas Rishel was assigned by Ray molenkamp 2020-04-10 07:07:30 +02:00
Member

I don't have the hardware to check @PrototypeNM1 mind taking a peek here?

I don't have the hardware to check @PrototypeNM1 mind taking a peek here?

Added subscriber: @bossman

Added subscriber: @bossman

I have similar problems with Huion H610proV2 tablet with lastest build (1a3928f33c).
Side switches assigned as middle and right mouse click do not work. Pen tip pressure works as expected.
I tried switching to Windows Ink in tablet driver but in that mode switches do not work also.

I have similar problems with Huion H610proV2 tablet with lastest build (1a3928f33c76). Side switches assigned as middle and right mouse click do not work. Pen tip pressure works as expected. I tried switching to Windows Ink in tablet driver but in that mode switches do not work also.

Yep, this is a consequence of how the Wintab code is attempting to correlate Windows mouse buttons to Wintab buttons. I'll think through it a bit more but this might become an issue of either getting high frequency tablet input or support the old button workflows.

Yep, this is a consequence of how the Wintab code is attempting to correlate Windows mouse buttons to Wintab buttons. I'll think through it a bit more but this might become an issue of either getting high frequency tablet input or support the old button workflows.

I checked Krita and Gimp to see if they had a solution here; neither handled this use case.

I checked Krita and Gimp to see if they had a solution here; neither handled this use case.
Author

Krita has an option called Use mouse events for right- and middle-clicks in its configure.
If I use this workaround, side switches work in my environment.
But the option is relatively new, which has been implemented since ver 4.2.
And I didn't know 'Hover Click' is not a common thing.
I gradually understand what @PrototypeNM1 is saying at D6675, and this issue is not a bug.
Thank you for looking into it.

Krita has an option called `Use mouse events for right- and middle-clicks` in its configure. If I use this workaround, side switches work in my environment. But the option is relatively new, which has been implemented since ver 4.2. And I didn't know 'Hover Click' is not a common thing. I gradually understand what @PrototypeNM1 is saying at [D6675](https://archive.blender.org/developer/D6675), and this issue is not a bug. Thank you for looking into it.

Keep this issue open, IMO it's still a bug until a fix is found, or a decision is made to either prefer the new or old system.

@n1729 Could you link me to the Krita option?

Keep this issue open, IMO it's still a bug until a fix is found, or a decision is made to either prefer the new or old system. @n1729 Could you link me to the Krita option?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
@PrototypeNM1 This one ![Annotation 2020-04-12 111920.jpg](https://archive.blender.org/developer/F8466328/Annotation_2020-04-12_111920.jpg) ![Annotation 2020-04-12 112106.jpg](https://archive.blender.org/developer/F8466327/Annotation_2020-04-12_112106.jpg) https://docs.krita.org/en/reference_manual/preferences/tablet_settings.html

This issue was referenced by 7c84f25453

This issue was referenced by 7c84f254532efda46fdbcaebcf13d62d70193ff0

@n1729 could you check if D7404's patch fixes your bug, alternatively there's a built at https://developer.blender.org/D7404

@n1729 could you check if [D7404](https://archive.blender.org/developer/D7404)'s patch fixes your bug, alternatively there's a built at https://developer.blender.org/D7404
Author

I tested D7404 and it works pretty well in both wintab and ink.
It perfectly fixed this issue.
Thank you so much, @PrototypeNM1!

I tested [D7404](https://archive.blender.org/developer/D7404) and it works pretty well in both wintab and ink. It perfectly fixed this issue. Thank you so much, @PrototypeNM1!
Added subscribers: @sherbert_lemon, @RenatoGangemi, @I618I382I

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This should be resolved now by reverting the Wintab commit in e90d842.

Before we bring back that code we'll need to verify the issues in this report are solved.

This should be resolved now by reverting the Wintab commit in e90d842. Before we bring back that code we'll need to verify the issues in this report are solved.

This issue was referenced by 5badaa8390

This issue was referenced by 5badaa83903bdb2367aa35701291b38e60ee45b5

Added subscriber: @jjrob114

Added subscriber: @jjrob114

Hello this issue seems to have possibly returned in 2.83.

My Equipment and Software: XP-Pen Pro 16.9 & Blender 2.83 on Windows 10
preferences.png

With Windows Ink selected as the Tablet API pressure works but the buttons on the side of the pen stop working (I have them set to Middle and Right Click)

If I switch the Blender Settings Tablet API over to Wintab, the buttons start working but the pressure stops working.

pen tablet driver.png

Hello this issue seems to have possibly returned in 2.83. My Equipment and Software: XP-Pen Pro 16.9 & Blender 2.83 on Windows 10 ![preferences.png](https://archive.blender.org/developer/F8576988/preferences.png) With Windows Ink selected as the Tablet API pressure works but the buttons on the side of the pen stop working (I have them set to Middle and Right Click) If I switch the Blender Settings Tablet API over to Wintab, the buttons start working but the pressure stops working. ![pen tablet driver.png](https://archive.blender.org/developer/F8576993/pen_tablet_driver.png)

Wintab pressure should work if you restart Blender.

D7840 should fix the issue with side buttons if it lands.

Wintab pressure should work if you restart Blender. [D7840](https://archive.blender.org/developer/D7840) should fix the issue with side buttons if it lands.

Removed subscriber: @RenatoGangemi

Removed subscriber: @RenatoGangemi

Added subscriber: @Bek23

Added subscriber: @Bek23

This comment was removed by @Bek23

*This comment was removed by @Bek23*

nicholas_rishel, hi! I'm an artist from Uzbekistan, so apologies for my English)

"D7840 should fix the issue with side buttons if it lands."

I'm new in Blender and first i have the same problem with Windows Ink. So guys, i follow your discussion and i guess i should insert some changes into the some source text files in the Blender root folders. If that's right, how to do it correctly? Please, can you explain me how to use this D7840 to fix the problem?
Thanks!

By the way, i have xp-pen artist 22 e tablet.
Windows 10
Blender version 2.83.0

nicholas_rishel, hi! I'm an artist from Uzbekistan, so apologies for my English) "[D7840](https://archive.blender.org/developer/D7840) should fix the issue with side buttons if it lands." I'm new in Blender and first i have the same problem with Windows Ink. So guys, i follow your discussion and i guess i should insert some changes into the some source text files in the Blender root folders. If that's right, how to do it correctly? Please, can you explain me how to use this [D7840](https://archive.blender.org/developer/D7840) to fix the problem? Thanks! By the way, i have xp-pen artist 22 e tablet. Windows 10 Blender version 2.83.0

@Bek23 heads up that Blender nightly will get D7840 in the next couple days.

@Bek23 heads up that Blender nightly will get [D7840](https://archive.blender.org/developer/D7840) in the next couple days.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75566
No description provided.